[Update] Several updates after reviewing 1. Change the url of PromotaionBanner on index page 2. Avoid horizontal scrolling on mobile devices 3. Use 'infographics' as the prefix of the url path when article style is interactive

--- a/src/components/topic/Topic.scss
+++ b/src/components/topic/Topic.scss
@@ -14,6 +14,11 @@ $card-width: 300px;
 $image-card-height: 200px;
 $text-card-height: 200px;
 
+.container {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 .leading-block {
   position: relative;
   height: 100vh;
